--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,13 +1,23 @@
 .header {
-  background-color: $gray-light;
 }
 
-.header__hero-image {
-  background-image: url("../img/hero-mobile@1x.jpg");
-  background-repeat: no-repeat;
-  background-position: 50% 0;
-  background-size: 100%;
-  min-height: 285px;
+.header__title-wrapper {
+  @include flex-vertical-center;
+  justify-content: center;
+
+  background-color: $gray-light;
+  min-height: 180px;
+
+  text-align: center;
+
+  &--hero {
+    background-color: $gray-light;
+    background-image: url("../img/hero-mobile@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: 50% 0;
+    background-size: 100%;
+    min-height: 285px;
+  }
 }
 
 .header__logo {
@@ -18,13 +28,9 @@
   font-size: 27px;
   line-height: 1.11;
   font-weight: $font-weight-bold;
-
   color: $very-dark-brown;
-
-  text-align: center;
-
-  padding: 76px 0 120px;
   margin: 0;
+  padding: 0;
 }
 
 @media (min-width: $tablet-width) {
