--- a/source/sass/blocks/order-form.scss
+++ b/source/sass/blocks/order-form.scss
@@ -77,15 +77,17 @@
 
 @media (min-width: $tablet-width) {
   .order-form {
-    padding-left: 51px;
+    padding-left: 0;
     padding-right: 51px;
   }
 
   .order-form__fieldset {
     flex-direction: row;
-    padding-left: 152px;
+    padding-left: 225px;
 
     position: relative;
+
+    margin-bottom: 50px;
   }
 
   .order-form__input-container {
@@ -111,6 +113,10 @@
     min-height: 53px;
   }
 
+  .order-form__legend {
+    left: 51px;
+  }
+
   .order-form__inputs-wrapper {
     width: 70%;
   }
@@ -118,5 +124,34 @@
   .order-form__label {
     display: flex;
     align-items: center;
+  }
+
+  .order-form__footer {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .order-form__submit {
+    max-width: 230px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .order-form__note {
+    padding-left: 225px;
+  }
+
+  .order-form__legend {
+    left: 114px;
+  }
+
+  .order-form__input-container {
+    flex-basis: 33%;
+  }
+
+  .order-form__footer {
+    padding-left: 225px;
   }
 }
