--- a/source/sass/base/base.scss
+++ b/source/sass/base/base.scss
@@ -1,5 +1,10 @@
 body {
-  margin: 0;
+  display: flex;
+  flex-direction: column;
+
+  max-width: 1150px;
+
+  margin: 0 auto;
   padding: 0;
 
   font-family: $font-family-default;
