index.html - mobile pixel perfect

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -17,6 +17,8 @@
   border: solid 2px $greyish-brown;
   background-color: $white;
 
+  letter-spacing: 1px;
+
   &--small {
     max-width: 192px;
   }
