--- a/source/sass/blocks/product-stats.scss
+++ b/source/sass/blocks/product-stats.scss
@@ -1,10 +1,16 @@
 .product-stats {
-  border-collapse: separate; /* Способ отображения границы */
-  width: 100%; /* Ширина таблицы */
-  border-spacing: 0; /* Расстояние между ячейками */
+  border-collapse: separate;
+  width: 100%;
+  border-spacing: 0;
+
+  margin-bottom: 32px;
 
   td {
     border-bottom: 1px solid $gray-light;
     padding: 10px 0;
   }
+}
+
+.product-stats__title {
+  min-width: 79px;
 }
