--- a/source/sass/blocks/categories.scss
+++ b/source/sass/blocks/categories.scss
@@ -1,5 +1,7 @@
 .categories {
   @include reset-list;
+
+  width: 100%;
 }
 
 .categories__item {
@@ -12,6 +14,11 @@
   font-size: 19px;
   font-weight: $font-weight-bold;
   line-height: 1.26;
+  text-align: left;
+  letter-spacing: 1px;
+
+  background-position: top 50% right 27px;
+  background-repeat: no-repeat;
 
   a {
     display: inline-block;
@@ -22,11 +29,26 @@
   &--dark {
     background-color: $greeny-blue;
   }
+
+  &--interior {
+    background-size: 40px 62px;
+    background-image: url("../img/icon-interior.svg");
+  }
+
+  &--toy {
+    background-image: url("../img/icon-toy.svg");
+    background-size: 60px 60px;
+  }
 }
 
 @media (min-width: $tablet-width) {
   .categories {
     display: flex;
     padding: 0 51px;
+  }
+
+  .categories__item {
+    padding: 35px 36px 34px 36px;
+    line-height: 1.5;
   }
 }
