--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -1,26 +1,27 @@
 .copyright {
-  min-height: 80px;
+  min-height: 65px;
 
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
+  padding-right: 30px;
 }
 
 .copyright__text {
   font-size: 19px;
   font-weight: $font-weight-bold;
-
+  letter-spacing: 1px;
   color: $black;
 
-  margin-right: 30px;
+  margin-right: 25px;
 }
 
 .copyright__link {
   font-size: 0;
 
   svg {
-    height: 34px;
-    width: 27px;
+    height: 60px;
+    width: 40px;
 
     fill: $seafoam-blue;
   }
