--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -1,5 +1,5 @@
 .features {
-  margin: 34px 32px;
+  margin: 74px 32px 34px 32px;
 }
 
 .features__title {
@@ -8,6 +8,7 @@
 
   line-height: 1.2;
   color: $black;
+  margin: 0 0 30px 0;
 }
 
 .features__list {
@@ -15,19 +16,19 @@
 }
 
 .features__item {
-  font-size: 17px;
-  font-weight: $font-weight-bold;
   position: relative;
 
-  padding-top: 50px;
-
-  margin-bottom: 32px;
+  font-size: 17px;
+  font-weight: $font-weight-bold;
+  letter-spacing: 0.6px;
 
   background-position: 0 0;
   background-repeat: no-repeat;
-  background-size: 35px 35px;
+  background-size: 45px 35px;
 
-  padding-right: 50px;
+  padding-top: 53px;
+  padding-right: 0px;
+  margin-bottom: 30px;
 
   &:last-child {
     margin-bottom: 0;
@@ -35,26 +36,34 @@
 
   &--eco {
     background-image: url("../img/icon-feature-flower.svg");
+    background-position: 0 0;
   }
 
   &--scandinavian {
     background-image: url("../img/icon-feature-money.svg");
+    background-position: 0 -4px;
   }
 
   &--likes {
     background-image: url("../img/icon-feature-heart.svg");
+    background-position: 6px 3px;
+    background-size: 32px;
   }
 
   &--handmade {
     background-image: url("../img/icon-feature-ball.svg");
+    background-position: -2px 0;
   }
 
   &--local-support {
     background-image: url("../img/icon-feature-rocket.svg");
+    background-position: -7px 0;
+    background-size: 55px;
   }
 
   &--packing {
     background-image: url("../img/icon-feature-gift.svg");
+    background-position: 0 0;
   }
 }
 
