--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,19 +1,21 @@
 .header__title-wrapper {
   @include flex-vertical-center;
-  justify-content: center;
+  justify-content: space-between;
 
   background-color: $gray-light;
   min-height: 180px;
-
   text-align: center;
+
+  padding: 73px 0 120px;
 
   &--hero {
     background-color: $gray-light;
     background-image: url("../img/hero-mobile@1x.jpg");
     background-repeat: no-repeat;
     background-position: 50% 0;
-    background-size: 100%;
     min-height: 285px;
+    padding-bottom: 0;
+    background-size: cover;
   }
 }
 
@@ -28,21 +30,31 @@
   color: $very-dark-brown;
   margin: 0;
   padding: 0;
+  letter-spacing: 1px;
+
+  &--hero {
+    padding-bottom: 122px;
+  }
 }
 
 @media (min-width: $tablet-width) {
-  .header__title {
-    font-size: 43px;
-    padding: 104px 0 90px;
+  .header__title-wrapper {
+    padding-top: 105px;
+    padding-bottom: 99px;
 
     &--hero {
-      font-size: 43px;
-      padding: 124px 0 371px;
+      min-height: 746px;
+      padding-top: 161px;
+      padding-bottom: 0;
+      background-image: url("../img/hero-tablet@1x.jpg");
     }
   }
+  .header__title {
+    font-size: 43px;
 
-  .header__hero-image {
-    background-image: url("../img/hero-tablet@1x.jpg");
+    &--hero {
+      padding-bottom: 0;
+    }
   }
 
   .header__nav-wrapper {
@@ -56,9 +68,18 @@
 }
 
 @media (min-width: $desktop-width) {
+  .header__title-wrapper {
+    &--hero {
+      padding-bottom: 0;
+      background-image: url("../img/hero-desktop@1x.jpg");
+    }
+  }
+
   .header__title {
     font-size: 53px;
 
-    padding: 105px 0 111px;
+    &--hero {
+      padding-bottom: 0;
+    }
   }
 }
