--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -13,8 +13,8 @@
 
 .main-nav__toggle {
   position: absolute;
-  right: 10px;
-  top: 16px;
+  top: 14px;
+  right: 15px;
 
   width: 50px;
   height: 50px;
@@ -38,6 +38,8 @@
   min-width: 300px;
 
   font-size: 17px;
+
+  display: none;
 
   &--arrivals-sale {
     display: none;
