index.html - tablet version

--- a/source/sass/blocks/categories.scss
+++ b/source/sass/blocks/categories.scss
@@ -48,7 +48,8 @@
   }
 
   .categories__item {
-    padding: 35px 36px 34px 36px;
+    padding: 35px 36px 34px 37px;
     line-height: 1.5;
+    letter-spacing: 1.6px;
   }
 }
