--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -36,10 +36,9 @@
   justify-content: flex-start;
 
   min-width: 300px;
+  height: 100%;
 
   font-size: 17px;
-
-  display: none;
 
   &--arrivals-sale {
     display: none;
@@ -68,6 +67,8 @@
 
   &--free-shipping {
     display: none;
+
+    letter-spacing: 0.6px;
   }
 }
 
@@ -106,15 +107,19 @@
       flex-grow: 1;
 
       font-size: 15px;
+
+      max-height: 60px;
     }
+  }
+
+  .main-nav__icon {
+    // position: absolute;
   }
 
   .main-nav__item {
     padding: 25px 0;
-
-    &:not(:first-child) {
-      margin-left: 37px;
-    }
+    position: relative;
+    letter-spacing: 0.3px;
 
     &--logo {
       margin-right: auto;
@@ -125,9 +130,36 @@
     &--free-shipping {
       display: flex;
       order: 3;
+
+      margin-left: 0;
+      max-height: 60px;
+
       font-size: 15px;
       font-weight: 300;
+    }
+
+    &--search {
+      font-size: 0;
+      padding: 0 31px;
+
+      border-left: 1px solid $gray-dark;
+    }
+
+    &--cart {
+      border-left: 1px solid $gray-dark;
+
+      padding-left: 33px;
       margin-left: 0;
+    }
+
+    &--catalog {
+      margin-right: 37px;
+    }
+  }
+
+  .main-nav__icon {
+    &--cart {
+      margin-right: 34px;
     }
   }
 }
