--- a/source/sass/blocks/product-of-week.scss
+++ b/source/sass/blocks/product-of-week.scss
@@ -54,7 +54,7 @@
 
 @media (min-width: $tablet-width) {
   .product-of-week {
-    margin: 34px 50px 0;
+    margin: 48px 50px 0;
 
     display: flex;
     flex-direction: column;
@@ -78,7 +78,12 @@
 
   .product-of-week__description {
     max-width: 282px;
-    margin: 0 0 54px 0;
+    margin: 0 0 38px 0;
+    padding-top: 24px;
+
+    font-size: 17px;
+    line-height: 1.76;
+    letter-spacing: 0.6px;
   }
 
   .product-of-week__content-wrapper {
@@ -108,6 +113,8 @@
     font-size: 20px;
     font-weight: $font-weight-bold;
     color: $greyish-brown;
+
+    margin-bottom: 31px;
   }
 }
 
