--- a/source/sass/blocks/product-stats.scss
+++ b/source/sass/blocks/product-stats.scss
@@ -7,10 +7,16 @@
 
   td {
     border-bottom: 1px solid $gray-light;
-    padding: 10px 0;
+    padding: 11px 0 10px 2px;
   }
 }
 
 .product-stats__title {
   min-width: 79px;
+}
+
+@media (min-width: $tablet-width) {
+  .product-stats__title {
+    min-width: 66px;
+  }
 }
