--- a/source/sass/base/mixins.scss
+++ b/source/sass/base/mixins.scss
@@ -34,3 +34,10 @@
 
   transform: translate3d(-50%, -50%, 0);
 }
+
+@mixin zigzag-line {
+  background-image: url("../img/bg-zigzag-line.svg");
+  background-position: 0px 100%;
+  background-size: auto 15px;
+  background-repeat: repeat-x;
+}
