index.html - desktop WIP

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -85,5 +85,11 @@
     &--hero {
       padding-bottom: 0;
     }
+
+    br {
+      &:first-child {
+        display: block;
+      }
+    }
   }
 }
