--- a/source/sass/base/base.scss
+++ b/source/sass/base/base.scss
@@ -2,9 +2,11 @@ body {
   display: flex;
   flex-direction: column;
 
+  justify-content: center;
+
   max-width: 1150px;
 
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
 
   font-family: $font-family-default;
