--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -99,15 +99,15 @@
 
     font-size: 20px;
 
-    br {
-      display: none;
-    }
+    // br {
+    //   display: none;
+    // }
   }
 }
 
 @media (min-width: $desktop-width) {
   .features {
-    margin: 34px 225px;
+    padding: 34px 225px;
   }
 
   .features__title {
@@ -116,5 +116,9 @@
 
   .features__item {
     padding-right: 20%;
+
+    // br {
+    //   display: block;
+    // }
   }
 }
