--- a/source/sass/base/base.scss
+++ b/source/sass/base/base.scss
@@ -3,10 +3,11 @@ body {
   flex-direction: column;
 
   justify-content: center;
+  align-items: center;
 
   max-width: 1150px;
 
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
 
   font-family: $font-family-default;
