--- a/source/sass/base/mixins.scss
+++ b/source/sass/base/mixins.scss
@@ -57,7 +57,7 @@
 
     background-image: url("../img/bg-zigzag-fill.svg");
     background-position: 50%;
-    background-size: 100% 100%;
+    background-size: auto 100%;
     background-repeat: repeat-x;
   }
 }
