--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -92,6 +92,10 @@
 
     br {
       &:first-child {
+        display: none;
+      }
+
+      &:nth-child(2) {
         display: block;
       }
     }
