--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -129,25 +129,36 @@
 @media (min-width: $desktop-width) {
   .contacts {
     min-height: 663px;
-    padding: 152px 51px 105px 224px;
-
-    background-position: 113px 133px;
+    padding: 167px 51px 105px 225px;
+    background-position: 112px 157px;
   }
 
   .contacts__title {
     font-size: 53px;
 
     margin-left: 0;
-    margin-bottom: 64px;
+    margin-bottom: 44px;
     padding-left: 0;
   }
 
   .contacts__table {
-    margin: 0 0 70px 0;
+    margin: 0 0 80px 0;
+  }
+
+  .contacts__link {
+    letter-spacing: 0.6px;
+  }
+
+  .contacts__text {
+    padding-right: 19px;
+  }
+
+  .contacts__value {
+    letter-spacing: 0px;
   }
 
   .contacts__row {
-    margin: 0 0 35px 0;
+    margin: 0 0 30px 0;
 
     font-size: 17px;
     line-height: 1.76;
@@ -165,9 +176,8 @@
     position: absolute;
 
     right: 51px;
-    top: 71px;
+    top: 96px;
     bottom: 105px;
-
     width: 525px;
   }
 
