--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -137,13 +137,24 @@
 @media (min-width: $desktop-width) {
   .reviews {
     padding-left: 174px;
-    padding-bottom: 167px;
-    margin-left: 48px;
+    padding-bottom: 100px;
     padding-top: 70px;
+
+    margin-left: 48px;
+    margin-bottom: 67px;
+  }
+
+  .reviews__title {
+    margin-bottom: 43px;
+  }
+
+  .reviews__description {
+    padding-right: 100px;
+    margin-bottom: 38px;
   }
 
   .reviews__controls {
-    bottom: 114px;
+    bottom: 95px;
   }
 
   .reviews__title {
