--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -1,9 +1,107 @@
+.product-card__image-wrapper {
+  font-size: 0;
+}
+
 .product-card__image {
   flex-basis: 50%;
+  width: 100%;
+}
+
+.product-card__title {
+  @include no-margin-no-padding;
+
+  margin-bottom: 13px;
+
+  font-size: 17px;
+  font-weight: $font-weight-bold;
+  letter-spacing: 0.9px;
+  line-height: 1.45;
+
+  color: $black;
+}
+
+.product-card__size {
+  // display: block;
+}
+
+.product-card__info {
+  display: flex;
+  flex-direction: column;
+
+  padding: 26px 25px 30px 28px;
+
+  border: solid 1px $gray-dark;
+}
+
+.product-card__text-container {
+  padding-bottom: 25px;
+  margin-bottom: 22px;
+
+  border-bottom: 1px solid $gray-light;
+}
+
+.product-card__footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.product-card__cart {
+  @include fullwidth-centered-background-image;
+
+  width: 21px;
+  height: 18px;
+
+  background-image: url("../img/icon-cart.svg");
+  opacity: 0.2;
+}
+
+@media (min-width: $tablet-width) {
+  .product-card__image {
+    min-height: 462px;
+  }
+
+  .product-card__title {
+    font-size: 20px;
+    font-weight: $font-weight-bold;
+  }
+
+  .product-card__size {
+    font-size: 15px;
+  }
+
+  .product-card__price {
+    font-size: 17px;
+    font-weight: $font-weight-bold;
+  }
+
+  .product-card__image-wrapper {
+    flex-basis: 50%;
+  }
+
+  .product-card__info {
+    flex-basis: 50%;
+    padding: 29px 32px 32px 28px;
+  }
 }
 
 @media (min-width: $desktop-width) {
-  .product-card__image {
-    min-height: 462px;
+  .product-card__image-wrapper {
+    flex-basis: 462px;
+    min-height: 334px;
+  }
+
+  .product-card__text-container {
+    flex-grow: 1;
+  }
+
+  .product-card__title {
+    margin: 0 0 15px 0;
+  }
+
+  .product-card__info {
+    min-height: 197px;
+
+    padding-left: 25px;
   }
 }
