--- a/source/sass/base/mixins.scss
+++ b/source/sass/base/mixins.scss
@@ -71,8 +71,8 @@
     height: 24px;
 
     background-image: url("../img/bg-zigzag-fill.svg");
-    background-position: 50%;
-    background-size: auto 100%;
+    background-position: 0%;
+    background-size: 100% 100%;
     background-repeat: repeat-x;
   }
 }
