--- a/source/sass/blocks/how-its-done.scss
+++ b/source/sass/blocks/how-its-done.scss
@@ -18,39 +18,45 @@
 }
 
 .how-its-done__title {
+  position: relative;
+
+  width: 100%;
+  padding: 29px 34px 26px 90px;
+  margin: 0;
+
   display: flex;
   align-items: center;
 
   font-size: 17px;
   font-weight: $font-weight-bold;
-  position: relative;
-
+  line-height: 1.25;
   color: $black;
-
-  width: 100%;
-
-  padding: 29px 34px;
-  margin: 0;
 
   background-image: url("../../img/icon-video.svg");
   background-size: 32px 32px;
-  background-position: 0 0;
+  background-position: 33px 50%;
   background-repeat: no-repeat;
 }
 
 .how-its-done__description {
-  padding: 0 34px;
-  margin: 0 0 40px 0;
+  padding: 24px 50px 0 34px;
+  margin: 0 0 26px 0;
 
-  font-size: 15px;
-  line-height: 2;
+  font-size: 13px;
+  line-height: 1.9;
+  letter-spacing: 0px;
+
   color: $greyish-brown;
 }
 
-.how-its-done__button-wrapper {
-  display: flex;
-  padding: 0 34px;
+.how-its-done__order {
   width: 100%;
+  max-width: 192px;
+  margin: 0 auto;
+
+  display: flex;
+
+  letter-spacing: -0.2px;
 }
 
 @media (min-width: $tablet-width) {
