--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -43,13 +43,19 @@
   &--arrivals-sale {
     display: none;
   }
+
+  &--closed {
+    display: none;
+  }
 }
 
 .main-nav__item {
+  position: relative;
+
   display: flex;
   align-items: center;
 
-  padding: 32px 0 32px 76px;
+  padding: 29px 0 29px 76px;
 
   a {
     font-weight: $font-weight-bold;
@@ -70,6 +76,13 @@
 
     letter-spacing: 0.6px;
   }
+}
+
+.main-nav__icon {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 30px;
 }
 
 @media (min-width: $tablet-width) {
