--- a/source/sass/blocks/product-of-week.scss
+++ b/source/sass/blocks/product-of-week.scss
@@ -150,7 +150,7 @@
   }
 
   .product-of-week__description {
-    margin: 0px 0 53px 0;
+    margin: 0 0 53px 0;
   }
 
   .product-of-week__image {
