--- a/source/sass/blocks/order-form.scss
+++ b/source/sass/blocks/order-form.scss
@@ -22,6 +22,14 @@
   border: none;
 
   width: 100%;
+
+  &--small-margin {
+    margin-bottom: 7px;
+  }
+}
+
+.order-form__input-wrapper {
+  position: relative;
 }
 
 .order-form__legend {
@@ -29,7 +37,7 @@
 
   width: 100%;
   padding: 0;
-  margin-bottom: 18px;
+  margin-bottom: 20px;
 
   display: flex;
   align-items: center;
@@ -40,6 +48,10 @@
   text-transform: uppercase;
 
   overflow: hidden;
+
+  &--small-margin {
+    margin-bottom: 7px;
+  }
 }
 
 .order-form__input-group {
@@ -61,22 +73,58 @@
   padding-left: 62px;
   margin-bottom: 16px;
 
-  &:last-child {
-    margin-bottom: 0;
-  }
-
   font-size: 17px;
   font-weight: $font-weight-bold;
   line-height: 1.06;
   color: $black;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+
+  &--checkbox {
+    padding-top: 13px;
+    margin-bottom: 21px;
+  }
+
+  &--text {
+    padding-top: 7px;
+    padding-left: 0;
+
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .order-form__input {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
-  clip: rect(0 0 0 0);
+  &--checkbox,
+  &--radio {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+  }
+
+  &--text {
+    width: 100%;
+    min-height: 50px;
+
+    font-size: 19px;
+    line-height: 1.06;
+    color: $black;
+
+    background-color: transparent;
+    box-shadow: inset 0px -2px 0 0 #000000;
+    border: none;
+
+    &::placeholder {
+      opacity: 0.3;
+      font-size: 17px;
+
+      color: rgba(68, 68, 68, 0.3);
+    }
+  }
 
   &:checked + .order-form__radio:after {
     position: absolute;
@@ -91,6 +139,23 @@
     background-color: #62d1ba;
     border-radius: 50%;
   }
+
+  &:checked + .order-form__checkbox {
+    background-image: url("../img/icon-tick.svg");
+    background-repeat: no-repeat;
+    background-position: 50%;
+    background-size: 22px 16px;
+  }
+}
+
+.order-form__input-icon {
+  position: absolute;
+  right: 5px;
+  top: 50%;
+  transform: translateY(-50%);
+
+  fill: $black;
+  opacity: 0.2;
 }
 
 .order-form__radio {
@@ -107,7 +172,24 @@
 
   background-color: transparent;
   border-radius: 50%;
-  border: solid 2px #444444;
+  border: solid 2px $greyish-brown;
+}
+
+.order-form__checkbox {
+  position: absolute;
+
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+
+  width: 40px;
+  height: 40px;
+
+  overflow: hidden;
+
+  background-color: transparent;
+  // border-radius: 50%;
+  border: solid 2px $greyish-brown;
 }
 
 .order-form__textarea {
@@ -129,9 +211,16 @@
   color: $greyish-brown;
 }
 
+.order-form__small {
+  font-size: 13px;
+  line-height: 1.85;
+
+  color: $greyish-brown;
+}
+
 .order-form__submit {
-  margin-top: 31px;
-  margin-bottom: 55px;
+  margin-top: 28px;
+  margin-bottom: 56px;
 }
 
 @media (min-width: $tablet-width) {
