--- a/source/sass/blocks/order-form.scss
+++ b/source/sass/blocks/order-form.scss
@@ -14,16 +14,13 @@
 }
 
 .order-form__fieldset {
-  width: 100%;
-
   @include flex-vertical-center;
   @include no-margin-no-padding;
 
+  width: 100%;
   margin-bottom: 28px;
 
   border: none;
-
-  width: 100%;
 
   &--small-margin {
     margin-bottom: 7px;
@@ -75,7 +72,7 @@
   position: relative;
 
   min-height: 40px;
-
+  width: 100%;
   padding-top: 10px;
   padding-left: 62px;
   margin-bottom: 16px;
@@ -122,7 +119,7 @@
     color: $black;
 
     background-color: transparent;
-    box-shadow: inset 0px -2px 0 0 #000000;
+    box-shadow: inset 0 -2px 0 0 #000000;
     border: none;
 
     &::placeholder {
@@ -133,7 +130,7 @@
     }
   }
 
-  &:checked + .order-form__radio:after {
+  &:checked + .order-form__radio::after {
     display: block;
   }
 
@@ -256,8 +253,6 @@
     position: relative;
 
     padding-left: 217px;
-    padding-top: 50px;
-    padding-bottom: 50px;
     margin-bottom: 0;
 
     flex-direction: row;
@@ -269,18 +264,70 @@
     &--type {
       margin-bottom: 7px;
     }
+
+    &--no-top-padding {
+      padding-top: 0;
+    }
+
+    &--tel,
+    &--email {
+      padding-top: 0;
+      padding-bottom: 0;
+    }
+
+    &--tel {
+      margin-bottom: 24px;
+    }
+  }
+
+  .order-form__wrapper {
+    &--gray {
+      background-color: $gray-light;
+    }
+
+    &--with-vertical-padding {
+      padding: 50px 0;
+    }
+
+    &--with-right-padding {
+      padding-right: 51px;
+    }
   }
 
   .order-form__label {
+    display: flex;
+    align-items: center;
     flex-basis: 50%;
 
     padding-top: 0;
     padding-left: 81px;
     margin-bottom: 36px;
 
+    letter-spacing: 1.2px;
+
     &--horizontal {
       display: flex;
       flex-wrap: wrap;
+    }
+
+    &--checkbox {
+      min-height: 52px;
+      max-width: 262px;
+
+      margin-bottom: 24px;
+
+      &:last-child,
+      &:nth-last-child(2) {
+        margin-bottom: 0;
+      }
+    }
+
+    &--text {
+      flex-direction: row;
+
+      padding-left: 0;
+
+      margin-bottom: 22px;
     }
   }
 
@@ -288,14 +335,21 @@
     position: absolute;
     padding: 0;
 
-    top: 60px;
+    top: 10px;
     left: 51px;
 
     width: auto;
+
+    margin: 0;
   }
 
   .order-form__input {
     min-height: 53px;
+    max-width: 100%;
+
+    &--fio {
+      margin-left: 27px;
+    }
   }
 
   .order-form__radio {
@@ -319,25 +373,8 @@
     width: 70%;
   }
 
-  .order-form__label {
-    display: flex;
-    align-items: center;
-
-    letter-spacing: 1.2px;
-
-    &--checkbox {
-      min-height: 52px;
-      max-width: 262px;
-    }
-
-    &--checkbox {
-      margin-bottom: 24px;
-
-      &:last-child,
-      &:nth-last-child(2) {
-        margin-bottom: 0;
-      }
-    }
+  .order-form__input-icon {
+    right: 23px;
   }
 
   .order-form__footer {
@@ -345,10 +382,21 @@
     flex-direction: row-reverse;
     justify-content: space-between;
     align-items: center;
+
+    padding: 0 51px 50px;
+  }
+
+  .order-form__small {
+    font-size: 17px;
+    line-height: 1.76;
+    text-align: right;
   }
 
   .order-form__submit {
     max-width: 230px;
+    margin: 0;
+
+    letter-spacing: 0.2px;
   }
 }
 
