- order-form__textarea - spacing

--- a/source/sass/blocks/order-form.scss
+++ b/source/sass/blocks/order-form.scss
@@ -444,6 +444,11 @@
     }
   }
 
+  .order-form__textarea {
+    padding: 12px 17px;
+    letter-spacing: 1px;
+  }
+
   .order-form__input-icon {
     right: 5px;
   }
