--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -27,6 +27,10 @@
     background-repeat: no-repeat;
     background-position: 50% 0;
     background-size: cover;
+
+    @media (min-resolution: $retina-dppx) {
+      background-image: url("../img/hero-mobile@2x.jpg");
+    }
   }
 }
 
@@ -63,6 +67,10 @@
       padding-top: 161px;
       padding-bottom: 0;
       background-image: url("../img/hero-tablet@1x.jpg");
+
+      @media (min-resolution: $retina-dppx) {
+        background-image: url("../img/hero-tablet@2x.jpg");
+      }
     }
   }
 
@@ -93,6 +101,10 @@
     &--hero {
       padding-bottom: 0;
       background-image: url("../img/hero-desktop@1x.jpg");
+
+      @media (min-resolution: $retina-dppx) {
+        background-image: url("../img/hero-desktop@2x.jpg");
+      }
     }
   }
 
