--- a/source/sass/base/mixins.scss
+++ b/source/sass/base/mixins.scss
@@ -76,3 +76,11 @@
     background-repeat: repeat-x;
   }
 }
+
+@mixin hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+}
