--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,6 +8,7 @@
 @import "./base/typography.scss";
 
 // blocks
+@import "./blocks/add-to-cart.scss";
 @import "./blocks/video-player.scss";
 @import "./blocks/button.scss";
 @import "./blocks/categories.scss";
@@ -18,6 +19,7 @@
 @import "./blocks/header.scss";
 @import "./blocks/how-its-done.scss";
 @import "./blocks/main-nav.scss";
+@import "./blocks/modal.scss";
 @import "./blocks/order-form.scss";
 @import "./blocks/product-card.scss";
 @import "./blocks/product-stats.scss";
