- main-nav hover/active colors

--- a/source/sass/base/variables.scss
+++ b/source/sass/base/variables.scss
@@ -9,6 +9,9 @@ $greyish-brown: #444444;
 $seafoam-blue: #63d1bb;
 $greeny-blue: #56c3b2;
 
+$black-lighen: rgba($black, 0.6);
+$black-very-lighen: rgba($black, 0.3);
+
 // fonts
 $font-family-default: "Open Sans", "Helvetica", sans-serif;
 $font-weight-default: 400;
