состояния по стайлгайду: - catergories - main-nav

--- a/source/sass/base/variables.scss
+++ b/source/sass/base/variables.scss
@@ -7,7 +7,9 @@ $black: #000000;
 $very-dark-brown: #010000;
 $greyish-brown: #444444;
 $seafoam-blue: #63d1bb;
+$seafoam-blue-two: #59d5bc;
 $greeny-blue: #56c3b2;
+$aqua-marine: #56c3b2;
 
 $black-lighen: rgba($black, 0.6);
 $black-very-lighen: rgba($black, 0.3);
