--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,25 +1,35 @@
 .button {
+  width: 100%;
+  padding: 13px 0;
+
   display: flex;
   justify-content: center;
   align-items: center;
 
-  width: 100%;
-
   font-size: 17px;
   text-decoration: none;
   text-align: center;
-  text-transform: uppercase;
   font-weight: $font-weight-bold;
-
-  padding: 13px 0;
-
   color: $greyish-brown;
+  letter-spacing: 1px;
+
+  text-transform: uppercase;
+
   border: solid 2px $greyish-brown;
   background-color: $white;
 
-  letter-spacing: 1px;
+  transition: $basic-all-transition;
 
   &--small {
     max-width: 192px;
+  }
+
+  &:hover {
+    color: $white;
+    background-color: $greyish-brown;
+  }
+
+  &:active {
+    color: rgba($white, 0.3);
   }
 }
